# memory-chat

./: .gitignore  db.py  main.py  pyproject.toml  requirements.txt
routes/: chat.py  notes.py
services/: chat_utils.py  embedding_service.py  file_utils.py  search_utils.py
