# pyproject.toml
[project]
name = "memory-chat"
version = "0.1.0"
description = "AI-powered memory search over personal notes"
authors = [{ name = "Vansh Parmar" }]
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.116.1",
    "openai>=1.101.0",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.1.0",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.48.1",
    "uvicorn>=0.35.0",
]
requires-python = ">=3.9"

[tool.uv]
